Design Wahou: Marquee & Page Transitions

--- a/index.html
+++ b/index.html
@@ -72,6 +72,22 @@
         </div>
     </section>
 
+    <!-- Marquee Wahou -->
+    <div class="marquee-container">
+        <div class="marquee-content">
+            <span class="marquee-item">Instant Brut</span>
+            <span class="marquee-item">Coffee & Sport</span>
+            <span class="marquee-item">Anglet</span>
+            <span class="marquee-item">Lagree Fitness</span>
+            <span class="marquee-item">Healthy Food</span>
+            <span class="marquee-item">Instant Brut</span>
+            <span class="marquee-item">Coffee & Sport</span>
+            <span class="marquee-item">Anglet</span>
+            <span class="marquee-item">Lagree Fitness</span>
+            <span class="marquee-item">Healthy Food</span>
+        </div>
+    </div>
+
     <!-- Concept / Manifeste -->
     <section class="py-5 section-padding bg-white bg-watermark-container position-relative">
         <!-- Personnages Intelligents -->
@@ -266,6 +282,9 @@
              <p class="small text-white-50">&copy; 2024 Doz Instant Brut</p>
         </div>
     </footer>
+
+    <!-- Page Transition Curtain -->
+    <div class="page-curtain"></div>
 
     <script async src="//www.instagram.com/embed.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1.0.29/bundled/lenis.min.js"></script> 
