--- a/coffee.html
+++ b/coffee.html
@@ -300,16 +300,52 @@
 
     <!-- Footer -->
     <footer class="bg-black text-white py-5 border-top border-secondary border-opacity-25">
-        <div class="container text-center">
-            <img src="assets/img/logo/principal_blanc.png" alt="DOZ" height="60" class="mb-4 opacity-75 hover-opacity-100 transition-all">
-            <div class="mb-3 mt-4">
+        <div class="container">
+            <!-- Logo + Quotes Slider -->
+            <div class="row align-items-center mb-4">
+                <div class="col-md-4 text-center text-md-start mb-3 mb-md-0">
+                    <img src="assets/img/logo/principal_blanc.png" alt="DOZ Logo Footer" height="60" class="opacity-75 hover-opacity-100 transition-all">
+                </div>
+                <div class="col-md-8">
+                    <div class="footer-quotes-slider">
+                        <div class="footer-quote is-active">« Si ça tremble, c’est que ça marche. »</div>
+                        <div class="footer-quote">« Lagree : la torture la plus élégante qui existe. »</div>
+                        <div class="footer-quote">« Tu vas me détester aujourd’hui, mais tu t’aimeras demain. »</div>
+                        <div class="footer-quote">« Le Megaformer ne mord pas… sauf quand tu relâches le core. »</div>
+                        <div class="footer-quote">« On ne compte pas les répétitions, on compte les secondes où tu veux abandonner. »</div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Infos + Map -->
+            <div class="row g-4 align-items-stretch">
+                <div class="col-md-5">
+                    <p class="mb-2 text-white-50 small text-uppercase">Studio Lagree & Coffee Shop</p>
+                    <p class="mb-1 text-white-50">2 Avenue de la Butte aux Cailles, Bâtiment Pasaia</p>
+                    <p class="mb-3 text-white-50">64600 Anglet • Pays Basque</p>
+                    <div class="d-flex align-items-center gap-3 mb-3">
+                        <a href="https://www.instagram.com/doz.instantbrut/" target="_blank" class="text-white fs-4 hover-scale" aria-label="Suivre Doz sur Instagram">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                        <span class="text-white-50 small">@doz.instantbrut</span>
+                    </div>
+                    <a href="https://member-app.deciplus.pro/doz-instantbrut/shop" target="_blank" class="btn btn-light btn-sm rounded-pill px-3 fw-bold">RÉSERVER UN COURS</a>
+                </div>
+                <div class="col-md-7">
+                    <div class="footer-map">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2894.208776241416!2d-1.514001323320612!3d43.49798006245546!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd514133f5afd48d%3A0x63cf4df6cb3d9951!2sDOZ%20Coffee%20shop%20%E2%80%A2%20Lagree%20Studio!5e0!3m2!1sfr!2sfr!4v1764604191502!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Bottom line -->
+            <div class="d-flex flex-column flex-md-row justify-content-between align-items-center mt-4 pt-3 border-top border-secondary border-opacity-25">
+                <p class="small text-white-50 mb-2 mb-md-0">&copy; 2024 Doz Instant Brut</p>
                 <a href="mentions-legales.html" class="text-white-50 text-decoration-none small mx-2 hover-text-white">Mentions Légales</a>
             </div>
-             <p class="small text-white-50">&copy; 2024 Doz Instant Brut</p>
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1.0.29/bundled/lenis.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous" async></script>
     <script src="js/script.js"></script>
