Lagree: fix planning section edges (no rounded top)

--- a/lagree.html
+++ b/lagree.html
@@ -178,7 +178,7 @@
     </section>
 
     <!-- Planning & Pricing -->
-    <section id="planning" class="py-5 section-padding bg-dark rounded-top-5 position-relative z-index-1">
+    <section id="planning" class="py-5 section-padding bg-dark position-relative z-index-1">
         <div class="container">
             
             <div class="text-center mb-5 fade-in-up">
