--- a/blog.html
+++ b/blog.html
@@ -316,6 +316,12 @@
         </div>
     </footer>
 
+    <!-- Xmas Yan (Noël) -->
+    <div class="xmas-yan-wrapper d-none d-md-block">
+        <img src="Visuels/Personnages/yan_noir.png" alt="Yan Noël" class="xmas-yan-img">
+        <div class="xmas-yan-hat"></div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
 </body>
