--- a/coffee.html
+++ b/coffee.html
@@ -346,6 +346,12 @@
         </div>
     </footer>
 
+    <!-- Xmas Yan (Noël) -->
+    <div class="xmas-yan-wrapper d-none d-md-block">
+        <img src="Visuels/Personnages/yan_noir.png" alt="Yan Noël" class="xmas-yan-img">
+        <div class="xmas-yan-hat"></div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous" async></script>
     <script src="js/script.js"></script>
