--- a/index.html
+++ b/index.html
@@ -303,6 +303,12 @@
     <!-- Page Transition Curtain -->
     <div class="page-curtain"></div>
 
+    <!-- Xmas Yan (Noël) -->
+    <div class="xmas-yan-wrapper d-none d-md-block">
+        <img src="Visuels/Personnages/yan_noir.png" alt="Yan Noël" class="xmas-yan-img">
+        <div class="xmas-yan-hat"></div>
+    </div>
+
     <script async src="//www.instagram.com/embed.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
