Brand: set Teo vert as favicon

--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/png" href="Visuels/Personnages/téo_vert.png">
 </head>
 <body class="bg-beige">
 
