Feat: restore Xmas Yan animation with visible badge (except coffee)

--- a/index.html
+++ b/index.html
@@ -306,8 +306,10 @@
 
     <!-- Xmas Yan (Noël) -->
     <div class="xmas-yan-wrapper d-none d-md-block">
-        <img src="assets/img/perso/yan_noir.png" alt="Yan Noël" class="xmas-yan-img">
-        <div class="xmas-yan-hat"></div>
+        <div class="xmas-yan-badge">
+            <img src="assets/img/perso/yan_noir.png" alt="Yan Noël" class="xmas-yan-img">
+            <div class="xmas-yan-hat"></div>
+        </div>
     </div>
 
     <script async src="//www.instagram.com/embed.js"></script>
