--- a/blog.html
+++ b/blog.html
@@ -319,8 +319,10 @@
 
     <!-- Xmas Yan (Noël) -->
     <div class="xmas-yan-wrapper d-none d-md-block">
-        <img src="assets/img/perso/yan_noir.png" alt="Yan Noël" class="xmas-yan-img">
-        <div class="xmas-yan-hat"></div>
+        <div class="xmas-yan-badge">
+            <img src="assets/img/perso/yan_noir.png" alt="Yan Noël" class="xmas-yan-img">
+            <div class="xmas-yan-hat"></div>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
