--- a/coffee.html
+++ b/coffee.html
@@ -347,6 +347,16 @@
         </div>
     </footer>
 
+    <!-- Personnage global DOZ -->
+    <div class="side-character">
+        <img 
+            src="assets/img/perso/sam_noir.png" 
+            data-variant-light="assets/img/perso/sam_noir.png"
+            data-variant-dark="assets/img/perso/sam_blanc.png"
+            alt=""
+            class="side-character-img">
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous" async></script>
     <script src="js/script.js"></script>
