--- a/lagree.html
+++ b/lagree.html
@@ -472,6 +472,16 @@
         </div>
     </footer>
 
+    <!-- Personnage global DOZ -->
+    <div class="side-character">
+        <img 
+            src="assets/img/perso/sam_noir.png" 
+            data-variant-light="assets/img/perso/sam_noir.png"
+            data-variant-dark="assets/img/perso/sam_blanc.png"
+            alt=""
+            class="side-character-img">
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
 </body>
