UX: remove global character, add blog breadcrumbs, enhance reveal animations

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <p class="text-muted">Né de l'envie de réunir deux passions sous un même toit à Anglet, DOZ est un lieu hybride où l'intensité de l'effort rencontre le réconfort d'une assiette saine. D'un côté, le premier studio Lagree du Pays Basque pour sculpter votre corps. De l'autre, une cuisine locale, colorée et faite maison.</p>
                     <p class="fw-bold mb-0">Venez pour transpirer, restez pour savourer.</p>
                 </div>
-                <div class="col-lg-7 fade-in-up delay-100">
+                <div class="col-lg-7 fade-in-up reveal-right delay-100">
                     <!-- Collage Dynamique -->
                     <div class="collage-container d-none d-md-block" style="height: 600px;">
                         <img src="assets/img/gallery/1.jpg" class="collage-img c-img-1" alt="Ambiance Coffee" style="width: 55%; height: 65%;">
@@ -128,7 +128,7 @@
                 </div>
             </div>
 
-            <div class="row g-4 fade-in-up delay-100">
+            <div class="row g-4 fade-in-up reveal-right delay-100">
                 <div class="col-md-4">
                     <div class="p-4 border border-light border-opacity-25 rounded-4 h-100 d-flex flex-column bg-white bg-opacity-10 hover-card backdrop-blur">
                         <div class="d-flex justify-content-between mb-4">
@@ -215,7 +215,7 @@
 
                     <a href="coffee.html" class="btn btn-dark rounded-pill px-4 py-3 mt-2 hover-scale">Découvrir la Carte</a>
                 </div>
-                <div class="col-lg-7 order-lg-1 fade-in-up delay-100">
+                <div class="col-lg-7 order-lg-1 fade-in-up reveal-right delay-100">
                     <div class="position-relative p-3">
                         <!-- Image principale (Locale) -->
                         <img src="assets/img/gallery/7.jpg" class="img-fluid rounded-4 shadow-lg w-100 object-fit-cover" style="height: 600px;" alt="Menu Doz">
@@ -303,16 +303,6 @@
 
     <!-- Page Transition Curtain -->
     <div class="page-curtain"></div>
-
-    <!-- Personnage global DOZ -->
-    <div class="side-character">
-        <img 
-            src="assets/img/perso/sam_noir.png" 
-            data-variant-light="assets/img/perso/sam_noir.png"
-            data-variant-dark="assets/img/perso/sam_blanc.png"
-            alt=""
-            class="side-character-img">
-    </div>
 
     <script async src="//www.instagram.com/embed.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
