--- a/coffee.html
+++ b/coffee.html
@@ -248,7 +248,7 @@
                 <div class="col-lg-6 fade-in-up">
                     <img src="assets/img/gallery/9.jpg" class="img-fluid rounded-4 shadow-lg w-100" alt="Café Sourcing">
                 </div>
-                <div class="col-lg-6 fade-in-up delay-100">
+                <div class="col-lg-6 fade-in-up reveal-right delay-100">
                     <span class="badge bg-white text-dark mb-3">NOS VALEURS</span>
                     <h2 class="display-4 fw-bold text-uppercase mb-4">Qualité &<br>Proximité</h2>
                     <p class="lead mb-4 opacity-75">Chez DOZ, nous croyons qu'une bonne cuisine commence par de bons produits.</p>
@@ -287,7 +287,7 @@
                 <h2 class="display-4 fw-bold text-uppercase">La Vie chez Doz</h2>
             </div>
             
-            <div class="gallery-grid fade-in-up delay-100">
+            <div class="gallery-grid fade-in-up reveal-right delay-100">
                 <div class="gallery-item"><img src="assets/img/gallery/1.jpg" class="gallery-img" alt="Coffee"></div>
                 <div class="gallery-item"><img src="assets/img/gallery/2.jpg" class="gallery-img" alt="Vibe"></div>
                 <div class="gallery-item"><img src="assets/img/gallery/3.jpg" class="gallery-img" alt="Food"></div>
@@ -346,16 +346,6 @@
             </div>
         </div>
     </footer>
-
-    <!-- Personnage global DOZ -->
-    <div class="side-character">
-        <img 
-            src="assets/img/perso/sam_noir.png" 
-            data-variant-light="assets/img/perso/sam_noir.png"
-            data-variant-dark="assets/img/perso/sam_blanc.png"
-            alt=""
-            class="side-character-img">
-    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous" async></script>
