Update 2025: footers, planning auto-highlight, new courses (Advanced/Doz Show), video section, admin config

--- a/blog.html
+++ b/blog.html
@@ -185,21 +185,6 @@
                     </article>
                 </div>
 
-                <!-- Article 7 -->
-                <div class="col-md-4 fade-in-up">
-                    <article class="h-100 d-flex flex-column bg-white p-3 rounded-4 shadow-sm hover-card transition-all">
-                        <a href="blog/articles_html/lagree-vs-crossfit-match-intensite.html" class="d-block mb-4 overflow-hidden rounded-3 position-relative">
-                            <img src="blog/articles_html/images/lagree-vs-crossfit-match-intensite.jpg" class="img-fluid w-100 object-fit-cover hover-scale" style="height: 220px;" alt="Lagree vs Crossfit">
-                        </a>
-                        <div class="flex-grow-1 px-2">
-                            <span class="text-uppercase text-doz-vert fw-bold x-small mb-2 d-block">COMPARATIF</span>
-                            <h3 class="h4 fw-bold mb-3"><a href="blog/articles_html/lagree-vs-crossfit-match-intensite.html" class="text-dark text-decoration-none">Lagree vs Crossfit : l'intensité comparée</a></h3>
-                        </div>
-                        <div class="px-2 mt-3 pt-3 border-top border-light">
-                            <a href="blog/articles_html/lagree-vs-crossfit-match-intensite.html" class="text-dark fw-bold text-decoration-none small text-uppercase d-flex align-items-center">Lire la suite <i class="fas fa-arrow-right ms-auto opacity-50"></i></a>
-                        </div>
-                    </article>
-                </div>
 
                 <!-- Article 8 -->
                 <div class="col-md-4 fade-in-up delay-100">
@@ -284,6 +269,9 @@
                         <div class="footer-quote">« Tu vas me détester aujourd’hui, mais tu t’aimeras demain. »</div>
                         <div class="footer-quote">« Le Megaformer ne mord pas… sauf quand tu relâches le core. »</div>
                         <div class="footer-quote">« On ne compte pas les répétitions, on compte les secondes où tu veux abandonner. »</div>
+                    <div class="footer-quote">« Après le shake, on se pose autour d’un bon café. »</div>
+                        <div class="footer-quote">« Megaformer pour trembler, cuisine DOZ pour se réconforter. »</div>
+                        <div class="footer-quote">« On sort cramé du cours, on repart apaisé du coffee shop. »</div>
                     </div>
                 </div>
             </div>
@@ -311,7 +299,7 @@
 
             <!-- Bottom line -->
             <div class="d-flex flex-column flex-md-row justify-content-between align-items-center mt-4 pt-3 border-top border-secondary border-opacity-25">
-                <p class="small text-white-50 mb-2 mb-md-0">&copy; 2024 Doz Instant Brut</p>
+                <p class="small text-white-50 mb-2 mb-md-0">&copy; 2025 Doz Instant Brut</p>
                 <a href="mentions-legales.html" class="text-white-50 text-decoration-none small mx-2 hover-text-white">Mentions Légales</a>
             </div>
         </div>
