--- a/lagree.html
+++ b/lagree.html
@@ -77,8 +77,8 @@
             <div class="col-lg-6">
                  <!-- Collage Lagree -->
                  <div class="position-relative" style="height: 500px;">
-                     <img src="https://doz-instantbrut.fr/_assets/media/df3d3aabd8c759d7f83c9f355409b0a7.jpg" class="collage-img c-img-1" alt="Lagree Machine" style="width: 80%; height: 80%; top: 0; left: 0; z-index: 1;">
-                     <img src="https://doz-instantbrut.fr/_assets/media/dae59cdbc370202c511e5026aeb0fe93.jpg" class="collage-img c-img-2" alt="Lagree Posture" style="width: 60%; height: 50%; bottom: 0; right: 0; z-index: 2;">
+                     <img src="assets/img/gallery/lagree_1.jpg" class="collage-img c-img-1" alt="Lagree Machine" style="width: 80%; height: 80%; top: 0; left: 0; z-index: 1;">
+                     <img src="assets/img/gallery/lagree_2.jpg" class="collage-img c-img-2" alt="Lagree Posture" style="width: 60%; height: 50%; bottom: 0; right: 0; z-index: 2;">
                  </div>
             </div>
         </div>
@@ -96,7 +96,7 @@
                     <p>Contrairement aux machines classiques, il permet une infinité de prises (mains, pieds) et de positions pour travailler le corps sous tous les angles, en tension constante, sans jamais relâcher l'effort.</p>
                 </div>
                 <div class="col-lg-6 fade-in-up delay-100">
-                    <img src="assets/img/gallery/megapro.png" class="img-fluid" alt="Schéma MegaPro Lagree">
+                    <img src="assets/img/gallery/megapro.png" class="img-fluid" alt="Schéma MegaPro Lagree" loading="lazy">
                 </div>
             </div>
         </div>
@@ -116,9 +116,9 @@
                 <div class="col-md-4 fade-in-up">
                     <div class="card bg-black text-white border-0 h-100 rounded-4 overflow-hidden hover-card">
                         <div class="position-relative" style="height: 200px;">
-                            <img src="https://doz-instantbrut.fr/_assets/media/22fa2cc05b4ab2ebf32498544aa311b9.jpg" class="w-100 h-100 object-fit-cover opacity-75" alt="Lagree Essentiel">
+                            <img src="assets/img/gallery/lagree_3.jpg" class="w-100 h-100 object-fit-cover opacity-75" alt="Lagree Essentiel" loading="lazy">
                             <div class="position-absolute top-0 start-0 p-3">
-                                <span class="badge bg-doz-lavande text-dark">SIGNATURE</span>
+                                <span class="course-badge course-badge--signature">SIGNATURE</span>
                             </div>
                         </div>
                         <div class="card-body p-4 d-flex flex-column">
@@ -137,9 +137,9 @@
                 <div class="col-md-4 fade-in-up delay-100">
                     <div class="card bg-black text-white border-0 h-100 rounded-4 overflow-hidden hover-card">
                         <div class="position-relative" style="height: 200px;">
-                            <img src="https://doz-instantbrut.fr/_assets/media/96cb6ee07806142a3eeea23eefa49618.jpg" class="w-100 h-100 object-fit-cover opacity-75" alt="Booty & Core">
+                            <img src="assets/img/gallery/lagree_4.jpg" class="w-100 h-100 object-fit-cover opacity-75" alt="Booty & Core" loading="lazy">
                             <div class="position-absolute top-0 start-0 p-3">
-                                <span class="badge bg-white text-dark">FOCUS</span>
+                                <span class="course-badge course-badge--focus">FOCUS</span>
                             </div>
                         </div>
                         <div class="card-body p-4 d-flex flex-column">
@@ -147,7 +147,7 @@
                             <p class="text-white-50 flex-grow-1">Un cours 100% Lagree avec objectifs abdos gainés et fessiers activés. Un focus principal sur le bas du corps.</p>
                             <ul class="list-unstyled small text-white-50 mt-3 border-top border-secondary pt-3">
                                 <li class="mb-2"><i class="fas fa-check text-doz-lavande me-2"></i> Ciblé Fessiers/Abdos</li>
-                                <li class="mb-2"><i class="fas fa-check text-doz-lavande me-2"></i> Sculpture</li>
+                                <li class="mb-2"><i class="fas fa-check text-doz-lavande me-2"></i> Tonifier</li>
                                 <li><i class="fas fa-check text-doz-lavande me-2"></i> Gainage Intense</li>
                             </ul>
                         </div>
@@ -158,9 +158,9 @@
                 <div class="col-md-4 fade-in-up delay-200">
                     <div class="card bg-black text-white border-0 h-100 rounded-4 overflow-hidden hover-card">
                         <div class="position-relative" style="height: 200px;">
-                            <img src="https://doz-instantbrut.fr/_assets/media/df3d3aabd8c759d7f83c9f355409b0a7.jpg" class="w-100 h-100 object-fit-cover opacity-75" alt="Lagree Fusion">
+                            <img src="assets/img/gallery/lagree_1.jpg" class="w-100 h-100 object-fit-cover opacity-75" alt="Lagree Fusion" loading="lazy">
                             <div class="position-absolute top-0 start-0 p-3">
-                                <span class="badge bg-warning text-dark">HYBRIDE</span>
+                                <span class="course-badge course-badge--hybride">HYBRIDE</span>
                             </div>
                         </div>
                         <div class="card-body p-4 d-flex flex-column">
@@ -175,7 +175,89 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Cours Spéciaux -->
+            <div class="row g-4 mt-2">
+                <div class="col-12">
+                    <h3 class="h5 text-uppercase text-white-50 mb-3">Sessions Spéciales</h3>
+                </div>
+
+                <!-- Warning Advanced -->
+                <div class="col-md-6 fade-in-up">
+                    <div class="card bg-black text-white border-0 h-100 rounded-4 overflow-hidden hover-card">
+                        <div class="position-relative" style="height: 220px;">
+                            <img src="assets/img/gallery/2025-07 Doz - Lagree @laurettecie - 02.jpg.jpeg" class="w-100 h-100 object-fit-cover opacity-75" alt="Warning Advanced" loading="lazy">
+                            <div class="position-absolute top-0 start-0 p-3">
+                                <span class="course-badge course-badge--warning">WARNING • ADVANCED</span>
+                            </div>
+                        </div>
+                        <div class="card-body p-4 d-flex flex-column">
+                            <h3 class="h4 text-doz-lavande mb-3">Warning Advanced</h3>
+                            <p class="text-white-50 flex-grow-1">
+                                Réservé aux pratiquants confirmés : rythme plus soutenu, enchaînements exigeants, intensité maximale.
+                                Idéal pour celles et ceux qui maîtrisent déjà les bases et veulent repousser leurs limites.
+                            </p>
+                            <p class="small text-white-50 mb-0 border-top border-secondary pt-3">
+                                <i class="fas fa-exclamation-triangle text-danger me-2"></i>Prérequis : plusieurs séances Lagree Essentiel récentes.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Doz Show -->
+                <div class="col-md-6 fade-in-up delay-100">
+                    <div class="card bg-black text-white border-0 h-100 rounded-4 overflow-hidden hover-card">
+                        <div class="position-relative" style="height: 220px;">
+                            <img src="assets/img/gallery/2025-07 Doz - Lagree @laurettecie - 18.jpg.jpeg" class="w-100 h-100 object-fit-cover opacity-75" alt="Doz Show Night Class" loading="lazy">
+                            <div class="position-absolute top-0 start-0 p-3">
+                                <span class="course-badge course-badge--dozshow">DOZ SHOW</span>
+                            </div>
+                        </div>
+                        <div class="card-body p-4 d-flex flex-column">
+                            <h3 class="h4 text-doz-lavande mb-3">Doz Show</h3>
+                            <p class="text-white-50 flex-grow-1">
+                                Cours en musique, lights et ambiance night session pour s’entraîner comme en show.
+                                Travail complet du corps, énergie haute et esprit fun, parfait pour se dépasser sans se prendre au sérieux.
+                            </p>
+                            <p class="small text-white-50 mb-0 border-top border-secondary pt-3">
+                                <i class="fas fa-music me-2"></i>Idéal en fin de journée ou pour des soirées spéciales Lagree.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+    </section>
+
+    <!-- Immersion vidéo -->
+    <section class="py-5 bg-black position-relative overflow-hidden video-lagree-wrapper">
+        <div class="container position-relative z-index-1">
+            <div class="row align-items-center g-4">
+                <div class="col-lg-6 order-lg-2">
+                    <div class="ratio ratio-16x9 rounded-4 overflow-hidden shadow-lg">
+                        <video data-video-src="assets/img/gallery/DOZ_LAGREE_1.mov"
+                               class="w-100 h-100 video-lagree"
+                               playsinline controls preload="none"
+                               poster="assets/img/gallery/lagree_1.jpg"></video>
+                    </div>
+                </div>
+                <div class="col-lg-6 order-lg-1 text-white">
+                    <span class="badge bg-doz-lavande text-dark mb-3">INSIDE THE STUDIO</span>
+                    <h2 class="display-5 fw-bold text-uppercase mb-3">Vivez le Lagree<br>de l’intérieur</h2>
+                    <p class="lead text-white-50 mb-4">
+                        Plongez dans l'ambiance du studio : la musique qui monte, les MegaPro alignés, l'énergie du groupe. 
+                        Cette vidéo vous donne un aperçu authentique d'une séance avant même de réserver.
+                    </p>
+                    <p class="text-white-50 small mb-3">
+                        <i class="fas fa-info-circle me-2"></i>Visionnage optimal en plein écran, son conseillé pour ressentir le rythme.
+                    </p>
+                    <a href="https://member-app.deciplus.pro/doz-instantbrut/shop" target="_blank" class="btn btn-light rounded-pill px-4 fw-bold">
+                        RÉSERVER UNE SÉANCE
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="position-absolute top-0 start-0 w-50 h-100 bg-gradient" style="background: radial-gradient(circle at 0 0, rgba(200,198,227,0.25), transparent 60%); opacity:0.7;"></div>
     </section>
 
     <!-- Planning & Pricing -->
@@ -230,24 +312,28 @@
                     <div class="tab-pane fade" id="day-tue">
                         <div class="d-flex flex-column gap-3">
                             <div class="d-flex align-items-center bg-black bg-opacity-50 p-3 rounded-3 border-start border-4 border-light">
-                                <span class="fs-4 fw-bold me-4 w-25">07:30</span>
-                                <div><strong class="d-block">BOOTY & CORE</strong><small class="text-white-50">45 min</small></div>
+                                <span class="fs-4 fw-bold me-4 w-25">07:15</span>
+                                <div><strong class="d-block">LAGREE ESSENTIEL</strong><small class="text-white-50">45 min</small></div>
                             </div>
                             <div class="d-flex align-items-center bg-black bg-opacity-50 p-3 rounded-3 border-start border-4 border-doz-lavande">
-                                <span class="fs-4 fw-bold me-4 w-25">08:30</span>
+                                <span class="fs-4 fw-bold me-4 w-25">08:15</span>
                                 <div><strong class="d-block">LAGREE ESSENTIEL</strong><small class="text-white-50">45 min</small></div>
                             </div>
                             <div class="d-flex align-items-center bg-black bg-opacity-50 p-3 rounded-3 border-start border-4 border-warning">
                                 <span class="fs-4 fw-bold me-4 w-25">12:30</span>
-                                <div><strong class="d-block">LAGREE FUSION</strong><small class="text-white-50">45 min</small></div>
+                                <div><strong class="d-block">BOOTY & CORE</strong><small class="text-white-50">45 min</small></div>
+                            </div>
+                            <div class="d-flex align-items-center bg-black bg-opacity-50 p-3 rounded-3 border-start border-4 border-warning">
+                                <span class="fs-4 fw-bold me-4 w-25">17:15</span>
+                                <div><strong class="d-block">LAGREE ESSENTIEL</strong><small class="text-white-50">45 min</small></div>
                             </div>
                             <div class="d-flex align-items-center bg-black bg-opacity-50 p-3 rounded-3 border-start border-4 border-warning">
                                 <span class="fs-4 fw-bold me-4 w-25">18:15</span>
-                                <div><strong class="d-block">LAGREE FUSION</strong><small class="text-white-50">45 min</small></div>
+                                <div><strong class="d-block">LAGREE ESSENTIEL</strong><small class="text-white-50">45 min</small></div>
                             </div>
                             <div class="d-flex align-items-center bg-black bg-opacity-50 p-3 rounded-3 border-start border-4 border-doz-lavande">
                                 <span class="fs-4 fw-bold me-4 w-25">19:15</span>
-                                <div><strong class="d-block">LAGREE ESSENTIEL</strong><small class="text-white-50">45 min</small></div>
+                                <div><strong class="d-block">WARNING : ADVANCED</strong><small class="text-white-50">45 min</small></div>
                             </div>
                         </div>
                     </div>
@@ -414,7 +500,7 @@
                             <span>8 Séances / mois</span> <strong>120 €</strong>
                         </div>
                         <div class="mt-4 p-3 bg-light rounded text-center">
-                            <i class="fas fa-coffee me-2"></i> Avantage Membre : <strong>-15% au Coffee Shop</strong>
+                            <i class="fas fa-coffee me-2"></i> Avantage Membre : <strong>-10% au Coffee Shop</strong>
                         </div>
                          <p class="text-center mt-3 small text-muted">Engagement 2 mois</p>
                     </div>
@@ -439,6 +525,9 @@
                         <div class="footer-quote">« Tu vas me détester aujourd’hui, mais tu t’aimeras demain. »</div>
                         <div class="footer-quote">« Le Megaformer ne mord pas… sauf quand tu relâches le core. »</div>
                         <div class="footer-quote">« On ne compte pas les répétitions, on compte les secondes où tu veux abandonner. »</div>
+                    <div class="footer-quote">« Après le shake, on se pose autour d’un bon café. »</div>
+                        <div class="footer-quote">« Megaformer pour trembler, cuisine DOZ pour se réconforter. »</div>
+                        <div class="footer-quote">« On sort cramé du cours, on repart apaisé du coffee shop. »</div>
                     </div>
                 </div>
             </div>
@@ -466,7 +555,7 @@
 
             <!-- Bottom line -->
             <div class="d-flex flex-column flex-md-row justify-content-between align-items-center mt-4 pt-3 border-top border-secondary border-opacity-25">
-                <p class="small text-white-50 mb-2 mb-md-0">&copy; 2024 Doz Instant Brut</p>
+                <p class="small text-white-50 mb-2 mb-md-0">&copy; 2025 Doz Instant Brut</p>
                 <a href="mentions-legales.html" class="text-white-50 text-decoration-none small mx-2 hover-text-white">Mentions Légales</a>
             </div>
         </div>
