--- a/index.html
+++ b/index.html
@@ -268,6 +268,9 @@
                         <div class="footer-quote">« Tu vas me détester aujourd’hui, mais tu t’aimeras demain. »</div>
                         <div class="footer-quote">« Le Megaformer ne mord pas… sauf quand tu relâches le core. »</div>
                         <div class="footer-quote">« On ne compte pas les répétitions, on compte les secondes où tu veux abandonner. »</div>
+                        <div class="footer-quote">« Après le shake, on se pose autour d’un bon café. »</div>
+                        <div class="footer-quote">« Megaformer pour trembler, cuisine DOZ pour se réconforter. »</div>
+                        <div class="footer-quote">« On sort cramé du cours, on repart apaisé du coffee shop. »</div>
                     </div>
                 </div>
             </div>
@@ -295,7 +298,7 @@
 
             <!-- Bottom line -->
             <div class="d-flex flex-column flex-md-row justify-content-between align-items-center mt-4 pt-3 border-top border-secondary border-opacity-25">
-                <p class="small text-white-50 mb-2 mb-md-0">&copy; 2024 Doz Instant Brut</p>
+                <p class="small text-white-50 mb-2 mb-md-0">&copy; 2025 Doz Instant Brut</p>
                 <a href="mentions-legales.html" class="text-white-50 text-decoration-none small mx-2 hover-text-white">Mentions Légales</a>
             </div>
         </div>
